--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -11,11 +11,17 @@
     - lsb-release
   become: yes
   
+- name: Get docker gpg
+  stat:
+    path: "/usr/share/keyrings/docker-archive-keyring.gpg"
+  register: check_docker_gpg
+  
 - name: Get docker to source list
   shell: "{{ item }}"
   loop:
     - "curl -fsSL https://download.docker.com/linux/{{ distro }}/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg"
     - echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/{{ distro }} $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+  when: not check_docker_gpg.stat.exists
 
 - name: Install docker
   apt:
