Introducing neovim role

--- a/main.yml
+++ b/main.yml
@@ -2,11 +2,12 @@
 - name: Install environment
   hosts: all
   roles:
-    - apt_packages
-    - fish
-    - vim
-    - git
-    - github
-    - docker
-    - kubernetes
-    - kind
+  - nvim
+    #    - apt_packages
+    #    - fish
+    #    - vim
+    #    - git
+    #    - github
+    #    - docker
+    #    - kubernetes
+    #    - kind
